# jp2anki

./: .gitignore  Cargo.toml  package-lock.json  package.json  template.html  tsconfig.json  webpack.config.js
jp2anki-dict/: Cargo.toml
jp2anki-dict-builder/: .gitignore  Cargo.toml  dictionary.idx
jp2anki-dict-builder/src/: jmdict.rs  main.rs  wanikani.rs
jp2anki-dict/src/: lib.rs
src/: lib.rs
www/: analyzer.tsx  bootstrap.js  filter.tsx  index.tsx  row_generator.tsx  style.scss
www/components/: App.tsx  ResultRow.tsx  ResultsView.tsx
