[package]
name = "jp2anki"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lindera = { version = "0.14.0", features = ["ipadic"] }
serde = { version = "1.0.141", features = ["derive"] }
wasm-bindgen = { version = "0.2.82", features = ["serde-serialize"] }
console_error_panic_hook = "0.1.7"
jp2anki-dict = { version = "0.1.0", path = "jp2anki-dict" }

[profile.dev]
opt-level = "z"

[profile.release]
opt-level = "z"
lto = "thin"

[workspace]
members = ["jp2anki-dict", "jp2anki-dict-builder"]
