[package]
name = "jp2anki-dict-builder"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.59"
bincode = "1.3.3"
chrono = { version = "0.4.19", features = ["serde"] }
clap = { version = "3.2.16", features = ["derive"] }
jp2anki-dict = { version = "0.1.0", path = "../jp2anki-dict" }
quick-xml = { version = "0.23.0", features = ["serialize"] }
reqwest = { version = "0.11.11", features = ["blocking", "json"] }
roxmltree = "0.14.1"
serde = { version = "1.0.142", features = ["derive"] }
thiserror = "1.0.32"
