[package]
name = "jp2anki-dict"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "1.3.3"
chrono = { version = "0.4.19", features = ["serde"] }
flate2 = "1.0.24"
serde = { version = "1.0.142", features = ["derive"] }
thiserror = "1.0.32"
